# semi_supervised_image_clf

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/commands/: data.md  lint.md  smoke.md  sweep.md  sync.md  test.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: fixmatch.yaml  simclr.yaml  supervised.yaml
kaggle/: fixmatch-sweep.ipynb  fixmatch_sweep.ipynb  simclr-pretrain.ipynb  simclr_pretrain.ipynb
src/semi_supervised_image_clf/: __init__.py  augmentations.py  config.py  dataset.py  evaluate.py  export.py  fixmatch.py  model.py  plot.py  simclr.py  supervised.py
tests/: conftest.py  test_augmentations.py  test_config.py  test_dataset.py  test_evaluate.py  test_export.py  test_fixmatch.py  test_model.py  test_plot.py  test_simclr.py  test_supervised.py
